--- a/hw09-mvc/src/main/resources/templates/book-edit.html
+++ b/hw09-mvc/src/main/resources/templates/book-edit.html
@@ -1,10 +1,70 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Book editor</title>
+    <style type="text/css">
+        html, body {
+            width: 99%;
+            height: 99%;
+        }
+
+        label {
+            display: inline-block;
+            width: 100px;
+        }
+
+        input:read-only {
+            background: lightgray;
+        }
+
+        select {
+            width: 200px;
+        }
+
+        .row {
+            margin-top: 10px;
+        }
+
+        .errors {
+            color: red;
+        }
+    </style>
 </head>
 <body>
+    <form id="edit-form" action="book-edit.html" th:action="@{/books/edit(id=${book.id})}" th:method="post" th:object="${book}">
+        <h3>Author Info:</h3>
 
+        <div class="row">
+            <label for="id-input">Id:</label>
+            <input id="id-input" type="text" readonly="readonly" name="id" th:value="*{id}" value="1"/>
+        </div>
+
+        <div class="row">
+            <label for="book-title-input">Title:</label>
+            <input id="book-title-input" name="title" type="text" th:value="*{title}" value="title"/>
+            <div class="errors" th:if="${#fields.hasErrors('title')}" th:errors="*{title}">Wrong book title error</div>
+        </div>
+
+        <div class="row">
+            <label for="book-author-selector">Author:</label>
+            <select id="book-author-selector" name="author" th:field="*{author}">
+                <option th:each="author : ${authors}" th:value="${author}" th:text="${author.fullName}"
+                        th:selected="${author.id} == *{author.id}">1</option>
+            </select>
+        </div>
+
+        <div class="row">
+            <label for="book-genre-selector">Genres:</label>
+            <select id="book-genre-selector" name="genres" th:field="*{genres}" multiple="multiple">
+                <option th:each="genre : ${genres}" th:value="${genre}" th:text="${genre.name}"></option>
+            </select>
+        </div>
+
+        <div class="row">
+            <button type="submit">Save</button>
+            <a href="books.html" th:href="@{/books}"><button type="button">Cancel</button></a>
+        </div>
+    </form>
 </body>
 </html>
