--- a/hw09-mvc/src/main/resources/templates/genre-edit.html
+++ b/hw09-mvc/src/main/resources/templates/genre-edit.html
@@ -2,7 +2,30 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Genre editor</title>
+    <style type="text/css">
+        html, body {
+            width: 99%;
+            height: 99%;
+        }
+
+        label {
+            display: inline-block;
+            width: 100px;
+        }
+
+        input:read-only {
+            background: lightgray;
+        }
+
+        .row {
+            margin-top: 10px;
+        }
+
+        .errors {
+            color: red;
+        }
+    </style>
 </head>
 <body>
 
