--- a/hw09-mvc/src/main/resources/templates/book-edit.html
+++ b/hw09-mvc/src/main/resources/templates/book-edit.html
@@ -32,12 +32,12 @@
     </style>
 </head>
 <body>
-    <form id="edit-form" action="book-edit.html" th:action="@{/books/edit(id=${book.id})}" th:method="post" th:object="${book}">
+    <form id="edit-form" action="book-edit.html" th:action="@{/books/edit}" th:method="post" th:object="${book}">
         <h3>Author Info:</h3>
 
         <div class="row">
             <label for="id-input">Id:</label>
-            <input id="id-input" type="text" readonly="readonly" name="id" th:value="*{id}" value="1"/>
+            <input id="id-input" type="text" th:readonly="${book.id} != '0'" name="id" th:value="*{id}" value="1"/>
         </div>
 
         <div class="row">
@@ -48,16 +48,16 @@
 
         <div class="row">
             <label for="book-author-selector">Author:</label>
-            <select id="book-author-selector" name="author" th:field="*{author}">
-                <option th:each="author : ${authors}" th:value="${author}" th:text="${author.fullName}"
-                        th:selected="${author.id} == *{author.id}">1</option>
+            <select id="book-author-selector" name="author" th:field="*{authorId}">
+                <option th:each="author : ${authors}" th:value="${author.id}" th:text="${author.fullName}"
+                        th:selected="${author.id} == *{authorId}">1</option>
             </select>
         </div>
 
         <div class="row">
             <label for="book-genre-selector">Genres:</label>
-            <select id="book-genre-selector" name="genres" th:field="*{genres}" multiple="multiple">
-                <option th:each="genre : ${genres}" th:value="${genre}" th:text="${genre.name}"></option>
+            <select id="book-genre-selector" name="genres" th:field="*{genreIds}" multiple="multiple">
+                <option th:each="genre : ${genres}" th:value="${{genre.id}}" th:text="${genre.name}"></option>
             </select>
         </div>
 
