--- a/hw09-mvc/src/main/resources/templates/books.html
+++ b/hw09-mvc/src/main/resources/templates/books.html
@@ -43,7 +43,7 @@
 <body>
   <h2 class="m-5">Book list</h2>
   <div class="d-actions">
-    <a href="book-edit.html" th:href="@{/books/edit?id=0}"><button type="button">Add book</button></a>
+    <a href="book-edit.html" th:href="@{/books/edit/0}"><button type="button">Add book</button></a>
     <a th:href="@{/}" href="library.html">back</a>
   </div>
   <table class="table">
