--- a/hw09-mvc/src/main/resources/templates/genres.html
+++ b/hw09-mvc/src/main/resources/templates/genres.html
@@ -43,7 +43,7 @@
 <body>
   <h2 class="m-5">Genre list</h2>
   <div class="d-actions">
-    <a href="genre-edit.html" th:href="@{/genres/edit?id=0}"><button type="button">Add genre</button></a>
+    <a href="genre-edit.html" th:href="@{/genres/edit/0}"><button type="button">Add genre</button></a>
     <a th:href="@{/}" href="library.html">back</a>
   </div>
   <table class="table">
