--- a/hw09-mvc/src/main/resources/templates/book-details.html
+++ b/hw09-mvc/src/main/resources/templates/book-details.html
@@ -88,7 +88,7 @@
             <div class="row">
                 <label for="comment-input">Comment:</label>
                 <input id="comment-input" type="text" name="comment" class="input-add-comment" placeholder="add comment" th:value="*{comment}"/>
-                <div class="errors" th:if="${#fields.hasErrors('comment')}" th:errors="*{comment}">Wrong author name error</div>
+                <div class="errors" th:if="${#fields.hasErrors('comment')}" th:errors="*{comment}">Wrong commentr</div>
             </div>
 
             <div class="row d-none">
@@ -101,7 +101,6 @@
         <div class="list-comments">
             <div class="comment" th:each="comment : ${comments}">
                 <p class="p-add-comment" th:text="${comment.comment}">comment</p>
-                <button>Edit</button>
             </div>
         </div>
     </div>
